unpackaged/main/default/objects/LSD_Update__c/LSD_Update__c.object-meta.xml
<CustomObject>
    <description>Used to update the loyalty start date</description>
    <label>LSD Update</label>
    <nameField>
        <displayFormat>LU-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LSD Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>