unpackaged/main/default/objects/LSD_Update__c/fields/By_Pass_Approval__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Approval</label>
    <type>Checkbox</type>
</CustomField>