unpackaged/main/default/objects/LSD_Update__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Stores the error if approved LSD is not being able to update on Agent</description>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>