unpackaged/main/default/objects/LSD_Update__c/fields/Loyalty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Start_Date__c</fullName>
    <label>Loyalty Start Date</label>
    <type>Date</type>
</CustomField>