unpackaged/main/default/objects/LSD_Update__c/fields/LSD_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>LSD_Update_Date__c</fullName>
    <description>When approved LSD is updated on Agent</description>
    <label>LSD Update Date</label>
    <type>DateTime</type>
</CustomField>